# Employee-Database-CMake

./: CMakeLists.txt  CMakePresets.json  main.cpp
data/: Employee.db  database.sql  sampleRecords.sql
data/csv/: DepartmentBackup.csv  EmployeeBackup.csv  EngineerBackup.csv  FinanceBackup.csv  HRBackup.csv  ManagerBackup.csv  QABackup.csv
include/controller/: DepartmentController.h  EmployeeController.h  EngineerController.h  ExportController.h  FinanceController.h  HRController.h  ManagerController.h  QAController.h  TableController.h
include/model/: Department.h  Employee.h  Engineer.h  Finance.h  HR.h  Manager.h  QA.h  Salary.h  Table.h
include/shared/: Config.h  DBManager.h  EmployeeDB.h  LogManager.h  Validate.h  View.h
include/view/: DepartmentView.h  EmployeeView.h  EngineerView.h  ExportView.h  FinanceView.h  HRView.h  MainView.h  ManagerView.h  QAView.h  TableView.h  Utility.h
lib/logician/: CMakeLists.txt  Log.cpp  Log.h  Timer.h
src/controller/: CMakeLists.txt  DepartmentController.cpp  EmployeeController.cpp  EngineerController.cpp  ExportController.cpp  FinanceController.cpp  HRController.cpp  ManagerController.cpp  QAController.cpp  TableController.cpp
src/shared/: CMakeLists.txt  DBManager.cpp  Validate.cpp
src/view/: CMakeLists.txt  DepartmentView.cpp  EmployeeView.cpp  EngineerView.cpp  ExportView.cpp  FinanceView.cpp  HRView.cpp  MainView.cpp  ManagerView.cpp  QAView.cpp  TableView.cpp  Utility.cpp
